--- a/index.html
+++ b/index.html
@@ -217,7 +217,326 @@
 	<br>
 	<span onclick="createIframe('https://html-classic.itch.zone/html/9720001/index.html')">Sprout Valley</span>
 </div>
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyNjcxNjU1LmdpZg==/315x250%23cm/vRov2Z.gif" alt="Fear Assessment">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8991133/Fear Assessment HTML 2.0/index.html')">Fear Assessment</span>
+</div>
 
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzg3NTE3ODAucG5n/315x250%23c/1XG2jG.png" alt="Astra's Garden">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9226865/index.html')">Astra's Garden</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEwOTgxMTcxLnBuZw==/315x250%23c/w81LXm.png" alt="Today, I'm Harvesting Y...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/7132574/todayimharvestingyou-1.0-web/index.html')">Today, I'm Harvesting Y...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzcyNjc2NjgucG5n/315x250%23c/b2ZhPb.png" alt="Leftovers">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4826476/Leftovers_WebGL/index.html')">Leftovers</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyNjA1MDA0LnBuZw==/315x250%23c/BxECk0.png" alt="Pizza Tower Academy - Dating ...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8187799/index.html')">Pizza Tower Academy - Dating ...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyMzU1NjU4LnBuZw==/315x250%23c/yJccgl.png" alt="Little Chef">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8589309/ItchBuild_1.3/index.html')">Little Chef</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzgyNzQzNjEucG5n/315x250%23c/MvTIEA.png" alt="Assessment Examinat...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/5392404/Web5/index.html')">Assessment Examinat...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzgxNTgzNDkucG5n/315x250%23c/meH060.png" alt="Learn Godot's GDScript From Z...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/5386836-879120/main/index.html')">Learn Godot's GDScript From Z...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyMzgwNjU2LnBuZw==/315x250%23c/oYL5kN.png" alt="GAVRIL">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8087042/index.html')">GAVRIL</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyNjEyMDc5LnBuZw==/315x250%23c/fZ6LOy.png" alt="Soul Void">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8332628/web/index.html')">Soul Void</span>
+</div>
+
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE4MTkwMTMuZ2lm/315x250%23cm/Jq16Jb.gif" alt="goodbye, doggy">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/1249714/index.html?v=1574336082')">goodbye, doggy</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzcxMDUyNjUucG5n/315x250%23c/%2FSHfYQ.png" alt="Flesh, Blood, & Concr...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8062890/www/index.html')">Flesh, Blood, & Concr...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyMjIxMjAwLmdpZg==/315x250%23cm/6DpX%2BN.gif" alt="purrgatory">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/7946454/purrgatory - web/index.html')">purrgatory</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEwMzQxNTAyLmdpZg==/315x250%23cm/ManKx4.gif" alt="HELP! NO BRAKE">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6749357/index.html')">HELP! NO BRAKE</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzkyMDk1ODAucG5n/315x250%23c/iCse%2F5.png" alt="Platformer Tool...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6005870/index.html')">Platformer Tool...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzUwNDc1NzcucG5n/315x250%23c/i1zyc1.png" alt="Smol Ame">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9973613/index.html')">Smol Ame</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE1NDMzNjU4LnBuZw==/315x250%23c/HL%2B3Dt.png" alt="Dungeon Deck">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9988024/index.html')">Dungeon Deck</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE0MzMzOTU3LnBuZw==/315x250%23c/xAVzaP.png" alt="Dear Edmund">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9547304/index.html')">Dear Edmund</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzI5NzQ0NzAucG5n/315x250%23c/0IM2AX.png" alt="Last Train Home">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/1970387/index.html?v=1582568685')">Last Train Home</span>
+</div>
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzc5NjkyMzkucG5n/315x250%23c/ivlsqQ.png" alt="Wayfarer">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8084668/game/index.html')">Wayfarer</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzQ5NTc0OTQucG5n/315x250%23c/vf9%2Bxr.png" alt="b-e-e-t-l-e">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/3215762/index.html')">b-e-e-t-l-e</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzk4MzM5ODkucG5n/315x250%23c/OxYdK5.png" alt="Ages of Conflict: World War Simula...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8495606/index.html')">Ages of Conflict: World War Simula...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzk5MzgzMTYuZ2lm/315x250%23cm/%2FvxQpF.gif" alt="Home Alone">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8471641/BGJ 2022.2 - Home Alone WebGL/index.html')">Home Alone</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyMjg0NDMxLmdpZg==/315x250%23cm/DNdZid.gif" alt="Thorn for the Villain~ Reincarnated as an Extra in an Otome Gam...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8177679/Thorn_for_the_Villain_DEMO-1.0-web/index.html')">Thorn for the Villain~ Reincarnated as an Extra in an Otome Gam...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzM4NjQ5MTEucG5n/315x250%23c/mAGO7V.png" alt="Vapor Trails">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/1418191-733102/Vapor Trails/index.html')">Vapor Trails</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE1MTQ3NjE2LnBuZw==/315x250%23c/5CTyNW.png" alt="Auto Necrochess">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9780112/index.html')">Auto Necrochess</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyNTMyNjg0LmpwZw==/315x250%23c/2xCT8A.jpg" alt="Little Runmo - The G...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9095118/Little Runmo - The Game/index.html')">Little Runmo - The G...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzMwODQxNDYucG5n/315x250%23c/kpgAoi.png" alt="Syrup and the Ultimate Sw...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8956143/index.html')">Syrup and the Ultimate Sw...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzIzNTk5MzkuZ2lm/315x250%23cm/NltxbN.gif" alt="Kraft & Slash">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4552916/index.html')">Kraft & Slash</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEzNjA0ODUwLnBuZw==/315x250%23c/fofxj9.png" alt="Sheep in Wolf's Cloth...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9193384/www/index.html')">Sheep in Wolf's Cloth...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyOTY0OTk0LmdpZg==/315x250%23cm/SE%2BuNN.gif" alt="Guidelicious">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8527034/index.html')">Guidelicious</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzU5ODg0MTAuanBn/315x250%23c/CEAxMp.jpg" alt="Throne of Ashes">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/7576110/ToA Demos/index.html')">Throne of Ashes</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzkzNTg1OTUucG5n/315x250%23c/prmajD.png" alt="Klifur">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6078076/index.html')">Klifur</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzUzNDQzNDYucG5n/315x250%23c/5gqoFC.png" alt="Pikwip">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6774401/Pikwip/index.html')">Pikwip</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1hZ2UvMjM1MDg0LzExMTcwMTIucG5n/315x250%23c/6wsVFy.png" alt="Cardinal Chains">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/5592688/index.html')">Cardinal Chains</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzQxMjQ3MDcucG5n/315x250%23c/zsfJb%2F.png" alt="A Tale of Cro...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9459257/A Tale of Crowns/index.html')">A Tale of Cro...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzI3NzAzNDcucG5n/315x250%23c/t4Pzqn.png" alt="is it that deep, b...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/1833076/IsItThatDeep-1.03-web/index.html?v=1577643755')">is it that deep, b...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEzODA1NDQzLnBuZw==/315x250%23c/NqRT10.png" alt="It Paints Me">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9019054/index.html')">It Paints Me</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzQ3OTQxNzYuZ2lm/315x250%23cm/vqpR5A.gif" alt="Opossum Country">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/3100618/index.html')">Opossum Country</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1hZ2UvOTIwMDIvNDM2NTQ2LmdpZg==/315x250%23cm/m4hhkT.gif" alt="First Kiss at a Spooky Soi...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8932039/index.html')">First Kiss at a Spooky Soi...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzUyMzMzNDEucG5n/315x250%23c/GlqLhQ.png" alt="The Ratchelor: A Rat Dating ...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/3388686/ratchelorItch/index.html')">The Ratchelor: A Rat Dating ...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzM1ODA5NjMucG5n/315x250%23c/wJOUc%2B.png" alt="Scout: An Apocalypse St...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/3052732/index.html')">Scout: An Apocalypse St...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1hZ2UvMjk2OTIxLzE0NTA1MjEucG5n/315x250%23c/B18tGv.png" alt="Bio Evil 4">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/1076464/index.html?v=1542780890')">Bio Evil 4</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzczMTkxNjgucG5n/315x250%23c/iKwjF%2B.png" alt="Blackout">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4816056/index.html')">Blackout</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzkxMzI5NjkucG5n/315x250%23c/%2FDwXCM.png" alt="Bad Monday Simula...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6086484/index.html')">Bad Monday Simula...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzMyOTc1NDQucG5n/315x250%23c/HVL9Q7.png" alt="Pigeon Ascent">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/7992101/index.html')">Pigeon Ascent</span>
+</div>
 
 
 
