--- a/index.html
+++ b/index.html
@@ -537,7 +537,325 @@
 	<br>
 	<span onclick="createIframe('https://html-classic.itch.zone/html/7992101/index.html')">Pigeon Ascent</span>
 </div>
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzExOTQ4NDEzLnBuZw==/315x250%23c/5aBmOk.png" alt="Maerl Bay">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/7775619/index.html')">Maerl Bay</span>
+</div>
 
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzQyODUxMjkucG5n/315x250%23c/trciOa.png" alt="George and the Prin...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2748523/gatp_webgl/index.html')">George and the Prin...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzQ1MjMxODcuZ2lm/315x250%23cm/zF03yy.gif" alt="Friday Night Funk...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2876359-359162/index.html')">Friday Night Funk...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzIyMjAzNTcucG5n/315x250%23c/oQTZaz.png" alt="Artificer">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2743755/index.html')">Artificer</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzQ1OTg4OTIucG5n/315x250%23c/CZUwCb.png" alt="Lo-Fi Room">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4582668-588639/index.html')">Lo-Fi Room</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE0NzcyNjY2LmpwZw==/315x250%23c/rj%2FN%2Bq.jpg" alt="IDOL">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9977665/www/index.html')">IDOL</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzcxMDY5NzYucG5n/315x250%23c/arF0FJ.png" alt="Silver Thread">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4536093/www/index.html')">Silver Thread</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzExNTA5ODQ1LnBuZw==/315x250%23c/VtJI1R.png" alt="Super Auto Pets">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9876237/Production WebGL/index.html')">Super Auto Pets</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyODA0OTMwLnBuZw==/315x250%23c/yKZeuN.png" alt="Turbo Outrun Reimagined v0.3.7e al...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9797870/index.html')">Turbo Outrun Reimagined v0.3.7e al...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzI5MTI3NDUucG5n/315x250%23c/9BiCpV.png" alt="Superstition S2">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6717644/Superstition S2/index.html')">Superstition S2</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzU4MDcwNTIuZ2lm/315x250%23cm/rN%2F6DO.gif" alt="Dome Romantik">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4392241/index.html')">Dome Romantik</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzIxNjg0NTMucG5n/315x250%23c/%2BB0A8k.png" alt="Goodnight Meow...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/1470999-789818/index.html')">Goodnight Meow...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1hZ2UvNTkzMjUvODE2MzY3LmdpZg==/315x250%23cm/ayW1Az.gif" alt="her tears were my li...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8848472/index.html')">her tears were my li...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzUzNzA0NzAuZ2lm/315x250%23cm/KZYgoc.gif" alt="V.R.G.">
+	<br>
+	<span onclick="createIframe('https://html.itch.zone/html/9975649/index.html')">V.R.G.</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzc4NzgwODcucG5n/315x250%23c/nOnNel.png" alt="Dog Wash">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/5076665/itch_1/index.html')">Dog Wash</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzY0MDM3NTkuZ2lm/315x250%23cm/VM4gJ2.gif" alt="novena">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4102318/novena/index.html')">novena</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzIwNjQzNTkucG5n/315x250%23c/Cdv0fe.png" alt="Gacha">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/1412917/index.html?v=1574335608')">Gacha</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzI3MTY2MjMucG5n/315x250%23c/bFnDqL.png" alt="Please Answer Carefu...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9045485/index.html')">Please Answer Carefu...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1hZ2UvMzA3MTk2LzE1MjExNDIuZ2lm/315x250%23cm/TXC8KY.gif" alt="Wholesome Cats">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/1071128/WebBuild/index.html?v=1542781917')">Wholesome Cats</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1hZ2UvMjUwOTYxLzExOTk2NTIucG5n/315x250%23c/0%2B%2B5gf.png" alt="Nightclub showd...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/3198875/index.html')">Nightclub showd...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE0MDIxNjU2LnBuZw==/315x250%23c/JyAJKY.png" alt="Backpack Hero">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6022827/web/index.html')">Backpack Hero</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEwNTA3NTkwLnBuZw==/315x250%23c/QwgTRc.png" alt="Gourdlets">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/7550065/itch/index.html')">Gourdlets</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyNTI4OTU0LmpwZw==/315x250%23c/fOY4uU.jpg" alt="Stardew Valley Character Crea...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9886643/Stardew-Valley-Character-Creator - Copy/index.html')">Stardew Valley Character Crea...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzk4ODk5ODQuZ2lm/315x250%23cm/fKbNTe.gif" alt="FeedVid">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/3602925-383830/index.html')">FeedVid</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE3MzkyNTEucG5n/315x250%23c/c7PVfq.png" alt="Last Minute Love – The Nursing Home Dating ...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2002324/lmlWeb3.1/index.html?v=1583444385')">Last Minute Love – The Nursing Home Dating ...</span>
+</div>
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzY2NzQ3NTUuanBn/315x250%23c/oi4npw.jpg" alt="EVERYBODY MUST ...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4263236/index.html')">EVERYBODY MUST ...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzYzODE4MjIucG5n/315x250%23c/XbEyPW.png" alt="mingle">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4107468/mingle/index.html')">mingle</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzI5NDE2NjkucG5n/315x250%23c/yJtW1x.png" alt="Trust Me, I Got Th...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/1933516/index.html?v=1583444642')">Trust Me, I Got Th...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzMxNzMyMTUucG5n/315x250%23c/OSMAHQ.png" alt="Devil Express">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2378121/DevilExpress_Web/index.html')">Devil Express</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzI3MTUwNjEuZ2lm/315x250%23cm/fB1ELT.gif" alt="Peckin' Pixels">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/3750086/index.html')">Peckin' Pixels</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzY2NzkxMzQuZ2lm/315x250%23cm/yOc7XL.gif" alt="Trigaea">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/5335672-634726/index.html')">Trigaea</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzQ0NDY4MjYucG5n/315x250%23c/oYAPtU.png" alt="Tentador Leches">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2861654/TentadoreLechesBrowser/index.html')">Tentador Leches</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzM4NDIzNTIucG5n/315x250%23c/ZRUc0V.png" alt="One Last Game">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2503126/index.html')">One Last Game</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzIxMDUyMTgucG5n/315x250%23c/FfUOn6.png" alt="But You Seem F...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/1430940/BYSFGoldMaster/index.html?v=1574335562')">But You Seem F...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzUyNjcwMzEucG5n/315x250%23c/l5X%2Bwx.png" alt="What's your gend...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4574759/WhatsYourGender/index.html')">What's your gend...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzk4MDY3NTgucG5n/315x250%23c/yrVB%2Bn.png" alt="Cat Cove Inn">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6577714/index.html')">Cat Cove Inn</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzExMjkyODEyLnBuZw==/315x250%23c/mC2wQK.png" alt="The Chef's Sh...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/7962201/TheChef'sShift/index.html')">The Chef's Sh...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzQzMDI4NzguZ2lm/315x250%23cm/O6F%2BOK.gif" alt="SPACE FROG!">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2766663/index.html')">SPACE FROG!</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1hZ2UvMTkyNDQ0LzkyOTg2MC5qcGc=/315x250%23c/343hak.jpg" alt="May I Take Your Or...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/1656281/MayITakeYourOrder-Ver.1.01-web/index.html?v=1574335014')">May I Take Your Or...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzgyMTQzMjUucG5n/315x250%23c/aBUYoE.png" alt="Party Project">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9945690/web971/index.html')">Party Project</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE0OTczODQwLnBuZw==/315x250%23c/dISnQo.png" alt="Bubble Frog">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9920803/index.html')">Bubble Frog</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyMjQ4NDI2LnBuZw==/315x250%23c/y3bKWa.png" alt="FARA">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/7997495/index.html')">FARA</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzQ0MTgzNTcucG5n/315x250%23c/MCFsEW.png" alt="Disco Elysium: Game Boy Edit...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2933435/web/index.html')">Disco Elysium: Game Boy Edit...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzgwNjc4MDAucG5n/315x250%23c/CuWecO.png" alt="Paper Soldiers">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/5201144/Paper Soldiers (WebGL)/index.html')">Paper Soldiers</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzg1MDAxMzYuanBn/315x250%23c/7hCn8Y.jpg" alt="Cohabitation">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/5473020/www/index.html')">Cohabitation</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE1MDg4MTEyLmdpZg==/315x250%23cm/Z0QEMx.gif" alt="The Penjikent Creature">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9734931/index.html')">The Penjikent Creature</span>
+</div>
 
 
 
