--- a/index.html
+++ b/index.html
@@ -835,7 +835,240 @@
 	<br>
 	<span onclick="createIframe('https://html-classic.itch.zone/html/9734931/index.html')">The Penjikent Creature</span>
 </div>
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzg3MTU5NzMucG5n/315x250%23c/svl%2Fnp.png" alt="10 Minutes Till D...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/5833734/10MinutesTillDawnWebGL/index.html')">10 Minutes Till D...</span>
+</div>
 
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzIwNjcxMjYucG5n/315x250%23c/VMyetj.png" alt="Slice of Scythe">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/1426083/webgl (post jam ver 3)/index.html?v=1574335575')">Slice of Scythe</span>
+</div>
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE0NjUzMjc1LnBuZw==/315x250%23c/ps8R2X.png" alt="God-Cursed">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9769808/index.html')">God-Cursed</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzQ4MzM3NDMuZ2lm/315x250%23cm/0ZaOd9.gif" alt="Black Resin">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6957140/BR_WEBGL_NO_WRONG_DRONG/index.html')">Black Resin</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzI2NzY1ODguZ2lm/315x250%23cm/8jVIMU.gif" alt="Tiny Islands (20...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/3140171/TinyIslands_RuleTweak_v14/index.html')">Tiny Islands (20...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEwMTY5NzEwLnBuZw==/315x250%23c/YTX5Lb.png" alt="Gospel Of Eve">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6681432/Eve-1.0-web/index.html')">Gospel Of Eve</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzM4NjQ4MTMucG5n/315x250%23c/YXsL7e.png" alt="Out of Ctrl">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2533715/OutOfCtrl_v1_2/index.html')">Out of Ctrl</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzkxMzQ2MDcucG5n/315x250%23c/KeASFH.png" alt="Swordbird Song: The Iron Owl To...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6763730/index.html')">Swordbird Song: The Iron Owl To...</span>
+</div>
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzc0MjgyODMucG5n/315x250%23c/dZTbiX.png" alt="flies in a jar">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4771088/index.html')">flies in a jar</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzM3OTMxODYucG5n/315x250%23c/qJCCgj.png" alt="UNDER A STAR CALLED ...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2347743/LIMINAL_BITSY_final_build/index.html')">UNDER A STAR CALLED ...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyMDEzMTE5LnBuZw==/315x250%23c/1vbA44.png" alt="Super Mario 63 Redux [Tiny De...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/7803470/index.html')">Super Mario 63 Redux [Tiny De...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE1NDY5MDM2LnBuZw==/315x250%23c/xd1En%2F.png" alt="Faunas Organized Nea...">
+	<br>
+	<span onclick="createIframe('https://html.itch.zone/html/9986729/index.html')">Faunas Organized Nea...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE0OTU1ODQ2LmpwZw==/315x250%23c/skx6h1.jpg" alt="Crown of Ashes and Fla...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9685156/index.html')">Crown of Ashes and Fla...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzc2MTgyMjQucG5n/315x250%23c/%2B6nivV.png" alt="Below The Ocean">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/5726411/index.html')">Below The Ocean</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE1MjkwOTAxLmdpZg==/315x250%23cm/siiL58.gif" alt="NIMRODS - Demo">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9589774/webgl-release/index.html')">NIMRODS - Demo</span>
+</div>
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzExNDQ5MjUyLmdpZg==/315x250%23cm/7THYqe.gif" alt="Lancer Tactics">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6355951-672964/index.html')">Lancer Tactics</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzI4NzQ4NDIuZ2lm/315x250%23cm/hsMRS5.gif" alt="✨💻ENDLESS SCROLL...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2595155/ENDLESSSCROLL_itch_final/index.html')">✨💻ENDLESS SCROLL...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE1MDIyNTY1LmpwZw==/315x250%23c/VCOm84.jpg" alt="The Second Sight: Dead Reckon...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9792496/index.html')">The Second Sight: Dead Reckon...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEzMjQ1NDk2LnBuZw==/315x250%23c/Y8Ygyt.png" alt="Folder Dungeon">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8580978/index.html')">Folder Dungeon</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzEyNDY3NjA1LnBuZw==/315x250%23c/vY76%2Fv.png" alt="EMUUROM">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/1936504-918001/index.html')">EMUUROM</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzMwNDkyMjkucG5n/315x250%23c/nmIykb.png" alt="Kill the Ice Age Baby Adventure: The G...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2001097/Kill the Ice Age Baby Adventure The Game/index.html?v=1583444390')">Kill the Ice Age Baby Adventure: The G...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzg0NDAzOTEucG5n/315x250%23c/DkF%2BIT.png" alt="The Legend of Lum...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9033509/export/index.html')">The Legend of Lum...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE0MjgyMjc5LnBuZw==/315x250%23c/0WZvwl.png" alt="Closing Doors">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9231408/Closing Doors - Web Build/index.html')">Closing Doors</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzUwOTU0NzcucG5n/315x250%23c/etxZpj.png" alt="Riba">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4436751/Riba_1.1_Web/index.html')">Riba</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzg1ODk3MDQuZ2lm/315x250%23cm/HjBJMj.gif" alt="lose95">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/5652546/index.html')">lose95</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzY4MDU0NjcucG5n/315x250%23c/Wda88F.png" alt="Burger & Frig...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/5033568/index.html')">Burger & Frig...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzM1MzY1MDMucG5n/315x250%23c/asKjq9.png" alt="There's Nothing To Do In This T...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2314826/web/index.html?v=1591301542')">There's Nothing To Do In This T...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzk3NTYyNDkucG5n/315x250%23c/93%2Bnv5.png" alt="The Night Abrid...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8161526/index.html')">The Night Abrid...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzcwNzA3NjYuZ2lm/315x250%23cm/z1zUNk.gif" alt="Tiny Crate">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4833805-946623/index.html')">Tiny Crate</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzk4Mzk5NTUucG5n/315x250%23c/%2FWoIL%2B.png" alt="Terraforma">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6451330/index.html')">Terraforma</span>
+</div>
+
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE0NzU0MTcxLnBuZw==/315x250%23c/hwZl2w.png" alt="The Case of the Serialized Kil...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/7035320/TheCaseoftheSerializedKillerDemo-ver1.02Demo-web/index.html')">The Case of the Serialized Kil...</span>
+</div>
+
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1hZ2UvMzM3MDAvMTQ1MDIxLmdpZg==/315x250%23cm/ywYPPV.gif" alt="Cuckoo Castle">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/2315059/CuckooCastle/index.html?v=1591301542')">Cuckoo Castle</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1hZ2UvMjk0MzM1LzE0ODgyMTYucG5n/315x250%23c/axeMCF.png" alt="Mai-Chan's Sweet B...">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9167295/index.html')">Mai-Chan's Sweet B...</span>
+</div>
+
+
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzcxNDE4NzUucG5n/315x250%23c/WfNQfy.png" alt="Karawan">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/5074877/index.html')">Karawan</span>
+</div>
 
 
 
