--- a/index.html
+++ b/index.html
@@ -1329,7 +1329,7 @@
 		<footer>
 			<input type="text" id="search" placeholder="Search for a game...">
 	</footer>
-<div id="circleHolder" style="position:absolute;top:0;left:0;width:100%;height:100%;margin:0;padding:0;"></div>
+<div id="circleHolder" style="z-index:-1;position:absolute;top:0;left:0;width:100%;height:100%;margin:0;padding:0;"></div>
 			<script>
 				function createIframe(url) {
             // Clear existing content
